// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`iOS dark mode dark mode should render correctly 1`] = `
<AIRMapMarker
  coordinate={
    Object {
      "latitude": 52.516379,
      "longitude": 13.378026,
    }
  }
  onPress={[Function]}
  stopPropagation={false}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "position": "absolute",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "paddingHorizontal": 6,
          "paddingVertical": 6,
          "shadowColor": "rgb(17, 18, 54)",
          "shadowOffset": Object {
            "height": 0.5,
            "width": 0,
          },
          "shadowOpacity": 0.15,
          "shadowRadius": 1.5,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgb(0, 166, 152)",
            "borderRadius": 40,
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
        ]
      }
    />
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgb(0, 166, 152)",
            "borderRadius": 4,
            "bottom": -3,
            "height": 16,
            "left": "38%",
            "position": "absolute",
            "transform": Array [
              Object {
                "rotate": "45deg",
              },
            ],
            "width": 16,
          },
        ]
      }
    />
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "rgb(255, 255, 255)",
            "fontFamily": "BpkIcon",
            "fontSize": 24,
            "includeFontPadding": false,
          },
          Object {
            "fontSize": 16,
          },
          Array [
            Object {
              "color": "rgb(255, 255, 255)",
            },
          ],
        ]
      }
    >
      
    </Text>
  </View>
</AIRMapMarker>
`;

exports[`iOS dark mode dark mode should render correctly with disabled={true} 1`] = `
<AIRMapMarker
  coordinate={
    Object {
      "latitude": 52.516379,
      "longitude": 13.378026,
    }
  }
  onPress={[Function]}
  stopPropagation={false}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "position": "absolute",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "paddingHorizontal": 6,
          "paddingVertical": 6,
          "shadowColor": "rgb(17, 18, 54)",
          "shadowOffset": Object {
            "height": 0.5,
            "width": 0,
          },
          "shadowOpacity": 0.15,
          "shadowRadius": 1.5,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgb(0, 166, 152)",
            "borderRadius": 40,
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          Object {
            "backgroundColor": "rgb(208, 238, 236)",
          },
        ]
      }
    />
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgb(0, 166, 152)",
            "borderRadius": 4,
            "bottom": -3,
            "height": 16,
            "left": "38%",
            "position": "absolute",
            "transform": Array [
              Object {
                "rotate": "45deg",
              },
            ],
            "width": 16,
          },
          Object {
            "backgroundColor": "rgb(208, 238, 236)",
          },
        ]
      }
    />
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "rgb(255, 255, 255)",
            "fontFamily": "BpkIcon",
            "fontSize": 24,
            "includeFontPadding": false,
          },
          Object {
            "fontSize": 16,
          },
          Array [
            Object {
              "color": "rgb(255, 255, 255)",
            },
            Object {
              "color": "rgb(115, 206, 198)",
            },
          ],
        ]
      }
    >
      
    </Text>
  </View>
</AIRMapMarker>
`;

exports[`iOS dark mode dark mode should render correctly with status=default 1`] = `
<AIRMapMarker
  coordinate={
    Object {
      "latitude": 52.516379,
      "longitude": 13.378026,
    }
  }
  onPress={[Function]}
  stopPropagation={false}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "position": "absolute",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "paddingHorizontal": 6,
          "paddingVertical": 6,
          "shadowColor": "rgb(17, 18, 54)",
          "shadowOffset": Object {
            "height": 0.5,
            "width": 0,
          },
          "shadowOpacity": 0.15,
          "shadowRadius": 1.5,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgb(0, 166, 152)",
            "borderRadius": 40,
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
        ]
      }
    />
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgb(0, 166, 152)",
            "borderRadius": 4,
            "bottom": -3,
            "height": 16,
            "left": "38%",
            "position": "absolute",
            "transform": Array [
              Object {
                "rotate": "45deg",
              },
            ],
            "width": 16,
          },
        ]
      }
    />
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "rgb(255, 255, 255)",
            "fontFamily": "BpkIcon",
            "fontSize": 24,
            "includeFontPadding": false,
          },
          Object {
            "fontSize": 16,
          },
          Array [
            Object {
              "color": "rgb(255, 255, 255)",
            },
          ],
        ]
      }
    >
      
    </Text>
  </View>
</AIRMapMarker>
`;

exports[`iOS dark mode dark mode should render correctly with status=focused 1`] = `
<AIRMapMarker
  coordinate={
    Object {
      "latitude": 52.516379,
      "longitude": 13.378026,
    }
  }
  onPress={[Function]}
  stopPropagation={false}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "position": "absolute",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "paddingHorizontal": 6,
          "paddingVertical": 6,
          "shadowColor": "rgb(17, 18, 54)",
          "shadowOffset": Object {
            "height": 0.5,
            "width": 0,
          },
          "shadowOpacity": 0.15,
          "shadowRadius": 1.5,
        },
        Object {
          "paddingHorizontal": 8,
          "paddingVertical": 8,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgb(0, 166, 152)",
            "borderRadius": 40,
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          Object {
            "backgroundColor": "rgb(58, 58, 60)",
            "borderBottomColor": "transparent",
            "borderLeftColor": "rgb(0, 166, 152)",
            "borderRightColor": "rgb(0, 166, 152)",
            "borderStyle": "solid",
            "borderTopColor": "rgb(0, 166, 152)",
            "borderWidth": 1,
          },
        ]
      }
    />
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgb(0, 166, 152)",
            "borderRadius": 4,
            "bottom": -3,
            "height": 16,
            "left": "38%",
            "position": "absolute",
            "transform": Array [
              Object {
                "rotate": "45deg",
              },
            ],
            "width": 16,
          },
          Object {
            "backgroundColor": "rgb(58, 58, 60)",
            "borderBottomLeftRadius": 0,
            "borderColor": "rgb(0, 166, 152)",
            "borderLeftColor": "transparent",
            "borderStyle": "solid",
            "borderTopColor": "transparent",
            "borderTopRightRadius": 0,
            "borderWidth": 1,
            "bottom": -3,
            "height": 17,
            "left": "46%",
            "width": 17,
          },
        ]
      }
    />
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "rgb(255, 255, 255)",
            "fontFamily": "BpkIcon",
            "fontSize": 24,
            "includeFontPadding": false,
          },
          Object {
            "fontSize": 16,
          },
          Array [
            Object {
              "color": "rgb(255, 255, 255)",
            },
            Object {
              "color": "rgb(0, 166, 152)",
            },
          ],
        ]
      }
    >
      
    </Text>
  </View>
</AIRMapMarker>
`;

exports[`iOS dark mode light mode should render correctly 1`] = `
<AIRMapMarker
  coordinate={
    Object {
      "latitude": 52.516379,
      "longitude": 13.378026,
    }
  }
  onPress={[Function]}
  stopPropagation={false}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "position": "absolute",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "paddingHorizontal": 6,
          "paddingVertical": 6,
          "shadowColor": "rgb(17, 18, 54)",
          "shadowOffset": Object {
            "height": 0.5,
            "width": 0,
          },
          "shadowOpacity": 0.15,
          "shadowRadius": 1.5,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgb(0, 166, 152)",
            "borderRadius": 40,
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
        ]
      }
    />
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgb(0, 166, 152)",
            "borderRadius": 4,
            "bottom": -3,
            "height": 16,
            "left": "38%",
            "position": "absolute",
            "transform": Array [
              Object {
                "rotate": "45deg",
              },
            ],
            "width": 16,
          },
        ]
      }
    />
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "rgb(17, 18, 54)",
            "fontFamily": "BpkIcon",
            "fontSize": 24,
            "includeFontPadding": false,
          },
          Object {
            "fontSize": 16,
          },
          Array [
            Object {
              "color": "rgb(255, 255, 255)",
            },
          ],
        ]
      }
    >
      
    </Text>
  </View>
</AIRMapMarker>
`;

exports[`iOS dark mode light mode should render correctly with disabled={true} 1`] = `
<AIRMapMarker
  coordinate={
    Object {
      "latitude": 52.516379,
      "longitude": 13.378026,
    }
  }
  onPress={[Function]}
  stopPropagation={false}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "position": "absolute",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "paddingHorizontal": 6,
          "paddingVertical": 6,
          "shadowColor": "rgb(17, 18, 54)",
          "shadowOffset": Object {
            "height": 0.5,
            "width": 0,
          },
          "shadowOpacity": 0.15,
          "shadowRadius": 1.5,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgb(0, 166, 152)",
            "borderRadius": 40,
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          Object {
            "backgroundColor": "rgb(208, 238, 236)",
          },
        ]
      }
    />
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgb(0, 166, 152)",
            "borderRadius": 4,
            "bottom": -3,
            "height": 16,
            "left": "38%",
            "position": "absolute",
            "transform": Array [
              Object {
                "rotate": "45deg",
              },
            ],
            "width": 16,
          },
          Object {
            "backgroundColor": "rgb(208, 238, 236)",
          },
        ]
      }
    />
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "rgb(17, 18, 54)",
            "fontFamily": "BpkIcon",
            "fontSize": 24,
            "includeFontPadding": false,
          },
          Object {
            "fontSize": 16,
          },
          Array [
            Object {
              "color": "rgb(255, 255, 255)",
            },
            Object {
              "color": "rgb(115, 206, 198)",
            },
          ],
        ]
      }
    >
      
    </Text>
  </View>
</AIRMapMarker>
`;

exports[`iOS dark mode light mode should render correctly with status=default 1`] = `
<AIRMapMarker
  coordinate={
    Object {
      "latitude": 52.516379,
      "longitude": 13.378026,
    }
  }
  onPress={[Function]}
  stopPropagation={false}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "position": "absolute",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "paddingHorizontal": 6,
          "paddingVertical": 6,
          "shadowColor": "rgb(17, 18, 54)",
          "shadowOffset": Object {
            "height": 0.5,
            "width": 0,
          },
          "shadowOpacity": 0.15,
          "shadowRadius": 1.5,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgb(0, 166, 152)",
            "borderRadius": 40,
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
        ]
      }
    />
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgb(0, 166, 152)",
            "borderRadius": 4,
            "bottom": -3,
            "height": 16,
            "left": "38%",
            "position": "absolute",
            "transform": Array [
              Object {
                "rotate": "45deg",
              },
            ],
            "width": 16,
          },
        ]
      }
    />
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "rgb(17, 18, 54)",
            "fontFamily": "BpkIcon",
            "fontSize": 24,
            "includeFontPadding": false,
          },
          Object {
            "fontSize": 16,
          },
          Array [
            Object {
              "color": "rgb(255, 255, 255)",
            },
          ],
        ]
      }
    >
      
    </Text>
  </View>
</AIRMapMarker>
`;

exports[`iOS dark mode light mode should render correctly with status=focused 1`] = `
<AIRMapMarker
  coordinate={
    Object {
      "latitude": 52.516379,
      "longitude": 13.378026,
    }
  }
  onPress={[Function]}
  stopPropagation={false}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "position": "absolute",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "paddingHorizontal": 6,
          "paddingVertical": 6,
          "shadowColor": "rgb(17, 18, 54)",
          "shadowOffset": Object {
            "height": 0.5,
            "width": 0,
          },
          "shadowOpacity": 0.15,
          "shadowRadius": 1.5,
        },
        Object {
          "paddingHorizontal": 8,
          "paddingVertical": 8,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgb(0, 166, 152)",
            "borderRadius": 40,
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          Object {
            "backgroundColor": "rgb(255, 255, 255)",
            "borderBottomColor": "transparent",
            "borderLeftColor": "rgb(0, 166, 152)",
            "borderRightColor": "rgb(0, 166, 152)",
            "borderStyle": "solid",
            "borderTopColor": "rgb(0, 166, 152)",
            "borderWidth": 1,
          },
        ]
      }
    />
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgb(0, 166, 152)",
            "borderRadius": 4,
            "bottom": -3,
            "height": 16,
            "left": "38%",
            "position": "absolute",
            "transform": Array [
              Object {
                "rotate": "45deg",
              },
            ],
            "width": 16,
          },
          Object {
            "backgroundColor": "rgb(255, 255, 255)",
            "borderBottomLeftRadius": 0,
            "borderColor": "rgb(0, 166, 152)",
            "borderLeftColor": "transparent",
            "borderStyle": "solid",
            "borderTopColor": "transparent",
            "borderTopRightRadius": 0,
            "borderWidth": 1,
            "bottom": -3,
            "height": 17,
            "left": "46%",
            "width": 17,
          },
        ]
      }
    />
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "rgb(17, 18, 54)",
            "fontFamily": "BpkIcon",
            "fontSize": 24,
            "includeFontPadding": false,
          },
          Object {
            "fontSize": 16,
          },
          Array [
            Object {
              "color": "rgb(255, 255, 255)",
            },
            Object {
              "color": "rgb(0, 166, 152)",
            },
          ],
        ]
      }
    >
      
    </Text>
  </View>
</AIRMapMarker>
`;

exports[`iOS light mode dark mode should render correctly 1`] = `
<AIRMapMarker
  coordinate={
    Object {
      "latitude": 52.516379,
      "longitude": 13.378026,
    }
  }
  onPress={[Function]}
  stopPropagation={false}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "position": "absolute",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "paddingHorizontal": 6,
          "paddingVertical": 6,
          "shadowColor": "rgb(17, 18, 54)",
          "shadowOffset": Object {
            "height": 0.5,
            "width": 0,
          },
          "shadowOpacity": 0.15,
          "shadowRadius": 1.5,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgb(0, 166, 152)",
            "borderRadius": 40,
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
        ]
      }
    />
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgb(0, 166, 152)",
            "borderRadius": 4,
            "bottom": -3,
            "height": 16,
            "left": "38%",
            "position": "absolute",
            "transform": Array [
              Object {
                "rotate": "45deg",
              },
            ],
            "width": 16,
          },
        ]
      }
    />
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "rgb(255, 255, 255)",
            "fontFamily": "BpkIcon",
            "fontSize": 24,
            "includeFontPadding": false,
          },
          Object {
            "fontSize": 16,
          },
          Array [
            Object {
              "color": "rgb(255, 255, 255)",
            },
          ],
        ]
      }
    >
      
    </Text>
  </View>
</AIRMapMarker>
`;

exports[`iOS light mode dark mode should render correctly with disabled={true} 1`] = `
<AIRMapMarker
  coordinate={
    Object {
      "latitude": 52.516379,
      "longitude": 13.378026,
    }
  }
  onPress={[Function]}
  stopPropagation={false}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "position": "absolute",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "paddingHorizontal": 6,
          "paddingVertical": 6,
          "shadowColor": "rgb(17, 18, 54)",
          "shadowOffset": Object {
            "height": 0.5,
            "width": 0,
          },
          "shadowOpacity": 0.15,
          "shadowRadius": 1.5,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgb(0, 166, 152)",
            "borderRadius": 40,
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          Object {
            "backgroundColor": "rgb(208, 238, 236)",
          },
        ]
      }
    />
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgb(0, 166, 152)",
            "borderRadius": 4,
            "bottom": -3,
            "height": 16,
            "left": "38%",
            "position": "absolute",
            "transform": Array [
              Object {
                "rotate": "45deg",
              },
            ],
            "width": 16,
          },
          Object {
            "backgroundColor": "rgb(208, 238, 236)",
          },
        ]
      }
    />
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "rgb(255, 255, 255)",
            "fontFamily": "BpkIcon",
            "fontSize": 24,
            "includeFontPadding": false,
          },
          Object {
            "fontSize": 16,
          },
          Array [
            Object {
              "color": "rgb(255, 255, 255)",
            },
            Object {
              "color": "rgb(115, 206, 198)",
            },
          ],
        ]
      }
    >
      
    </Text>
  </View>
</AIRMapMarker>
`;

exports[`iOS light mode dark mode should render correctly with status=default 1`] = `
<AIRMapMarker
  coordinate={
    Object {
      "latitude": 52.516379,
      "longitude": 13.378026,
    }
  }
  onPress={[Function]}
  stopPropagation={false}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "position": "absolute",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "paddingHorizontal": 6,
          "paddingVertical": 6,
          "shadowColor": "rgb(17, 18, 54)",
          "shadowOffset": Object {
            "height": 0.5,
            "width": 0,
          },
          "shadowOpacity": 0.15,
          "shadowRadius": 1.5,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgb(0, 166, 152)",
            "borderRadius": 40,
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
        ]
      }
    />
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgb(0, 166, 152)",
            "borderRadius": 4,
            "bottom": -3,
            "height": 16,
            "left": "38%",
            "position": "absolute",
            "transform": Array [
              Object {
                "rotate": "45deg",
              },
            ],
            "width": 16,
          },
        ]
      }
    />
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "rgb(255, 255, 255)",
            "fontFamily": "BpkIcon",
            "fontSize": 24,
            "includeFontPadding": false,
          },
          Object {
            "fontSize": 16,
          },
          Array [
            Object {
              "color": "rgb(255, 255, 255)",
            },
          ],
        ]
      }
    >
      
    </Text>
  </View>
</AIRMapMarker>
`;

exports[`iOS light mode dark mode should render correctly with status=focused 1`] = `
<AIRMapMarker
  coordinate={
    Object {
      "latitude": 52.516379,
      "longitude": 13.378026,
    }
  }
  onPress={[Function]}
  stopPropagation={false}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "position": "absolute",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "paddingHorizontal": 6,
          "paddingVertical": 6,
          "shadowColor": "rgb(17, 18, 54)",
          "shadowOffset": Object {
            "height": 0.5,
            "width": 0,
          },
          "shadowOpacity": 0.15,
          "shadowRadius": 1.5,
        },
        Object {
          "paddingHorizontal": 8,
          "paddingVertical": 8,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgb(0, 166, 152)",
            "borderRadius": 40,
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          Object {
            "backgroundColor": "rgb(58, 58, 60)",
            "borderBottomColor": "transparent",
            "borderLeftColor": "rgb(0, 166, 152)",
            "borderRightColor": "rgb(0, 166, 152)",
            "borderStyle": "solid",
            "borderTopColor": "rgb(0, 166, 152)",
            "borderWidth": 1,
          },
        ]
      }
    />
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgb(0, 166, 152)",
            "borderRadius": 4,
            "bottom": -3,
            "height": 16,
            "left": "38%",
            "position": "absolute",
            "transform": Array [
              Object {
                "rotate": "45deg",
              },
            ],
            "width": 16,
          },
          Object {
            "backgroundColor": "rgb(58, 58, 60)",
            "borderBottomLeftRadius": 0,
            "borderColor": "rgb(0, 166, 152)",
            "borderLeftColor": "transparent",
            "borderStyle": "solid",
            "borderTopColor": "transparent",
            "borderTopRightRadius": 0,
            "borderWidth": 1,
            "bottom": -3,
            "height": 17,
            "left": "46%",
            "width": 17,
          },
        ]
      }
    />
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "rgb(255, 255, 255)",
            "fontFamily": "BpkIcon",
            "fontSize": 24,
            "includeFontPadding": false,
          },
          Object {
            "fontSize": 16,
          },
          Array [
            Object {
              "color": "rgb(255, 255, 255)",
            },
            Object {
              "color": "rgb(0, 166, 152)",
            },
          ],
        ]
      }
    >
      
    </Text>
  </View>
</AIRMapMarker>
`;

exports[`iOS light mode light mode should render correctly 1`] = `
<AIRMapMarker
  coordinate={
    Object {
      "latitude": 52.516379,
      "longitude": 13.378026,
    }
  }
  onPress={[Function]}
  stopPropagation={false}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "position": "absolute",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "paddingHorizontal": 6,
          "paddingVertical": 6,
          "shadowColor": "rgb(17, 18, 54)",
          "shadowOffset": Object {
            "height": 0.5,
            "width": 0,
          },
          "shadowOpacity": 0.15,
          "shadowRadius": 1.5,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgb(0, 166, 152)",
            "borderRadius": 40,
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
        ]
      }
    />
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgb(0, 166, 152)",
            "borderRadius": 4,
            "bottom": -3,
            "height": 16,
            "left": "38%",
            "position": "absolute",
            "transform": Array [
              Object {
                "rotate": "45deg",
              },
            ],
            "width": 16,
          },
        ]
      }
    />
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "rgb(17, 18, 54)",
            "fontFamily": "BpkIcon",
            "fontSize": 24,
            "includeFontPadding": false,
          },
          Object {
            "fontSize": 16,
          },
          Array [
            Object {
              "color": "rgb(255, 255, 255)",
            },
          ],
        ]
      }
    >
      
    </Text>
  </View>
</AIRMapMarker>
`;

exports[`iOS light mode light mode should render correctly with disabled={true} 1`] = `
<AIRMapMarker
  coordinate={
    Object {
      "latitude": 52.516379,
      "longitude": 13.378026,
    }
  }
  onPress={[Function]}
  stopPropagation={false}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "position": "absolute",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "paddingHorizontal": 6,
          "paddingVertical": 6,
          "shadowColor": "rgb(17, 18, 54)",
          "shadowOffset": Object {
            "height": 0.5,
            "width": 0,
          },
          "shadowOpacity": 0.15,
          "shadowRadius": 1.5,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgb(0, 166, 152)",
            "borderRadius": 40,
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          Object {
            "backgroundColor": "rgb(208, 238, 236)",
          },
        ]
      }
    />
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgb(0, 166, 152)",
            "borderRadius": 4,
            "bottom": -3,
            "height": 16,
            "left": "38%",
            "position": "absolute",
            "transform": Array [
              Object {
                "rotate": "45deg",
              },
            ],
            "width": 16,
          },
          Object {
            "backgroundColor": "rgb(208, 238, 236)",
          },
        ]
      }
    />
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "rgb(17, 18, 54)",
            "fontFamily": "BpkIcon",
            "fontSize": 24,
            "includeFontPadding": false,
          },
          Object {
            "fontSize": 16,
          },
          Array [
            Object {
              "color": "rgb(255, 255, 255)",
            },
            Object {
              "color": "rgb(115, 206, 198)",
            },
          ],
        ]
      }
    >
      
    </Text>
  </View>
</AIRMapMarker>
`;

exports[`iOS light mode light mode should render correctly with status=default 1`] = `
<AIRMapMarker
  coordinate={
    Object {
      "latitude": 52.516379,
      "longitude": 13.378026,
    }
  }
  onPress={[Function]}
  stopPropagation={false}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "position": "absolute",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "paddingHorizontal": 6,
          "paddingVertical": 6,
          "shadowColor": "rgb(17, 18, 54)",
          "shadowOffset": Object {
            "height": 0.5,
            "width": 0,
          },
          "shadowOpacity": 0.15,
          "shadowRadius": 1.5,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgb(0, 166, 152)",
            "borderRadius": 40,
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
        ]
      }
    />
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgb(0, 166, 152)",
            "borderRadius": 4,
            "bottom": -3,
            "height": 16,
            "left": "38%",
            "position": "absolute",
            "transform": Array [
              Object {
                "rotate": "45deg",
              },
            ],
            "width": 16,
          },
        ]
      }
    />
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "rgb(17, 18, 54)",
            "fontFamily": "BpkIcon",
            "fontSize": 24,
            "includeFontPadding": false,
          },
          Object {
            "fontSize": 16,
          },
          Array [
            Object {
              "color": "rgb(255, 255, 255)",
            },
          ],
        ]
      }
    >
      
    </Text>
  </View>
</AIRMapMarker>
`;

exports[`iOS light mode light mode should render correctly with status=focused 1`] = `
<AIRMapMarker
  coordinate={
    Object {
      "latitude": 52.516379,
      "longitude": 13.378026,
    }
  }
  onPress={[Function]}
  stopPropagation={false}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "position": "absolute",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "paddingHorizontal": 6,
          "paddingVertical": 6,
          "shadowColor": "rgb(17, 18, 54)",
          "shadowOffset": Object {
            "height": 0.5,
            "width": 0,
          },
          "shadowOpacity": 0.15,
          "shadowRadius": 1.5,
        },
        Object {
          "paddingHorizontal": 8,
          "paddingVertical": 8,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgb(0, 166, 152)",
            "borderRadius": 40,
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          Object {
            "backgroundColor": "rgb(255, 255, 255)",
            "borderBottomColor": "transparent",
            "borderLeftColor": "rgb(0, 166, 152)",
            "borderRightColor": "rgb(0, 166, 152)",
            "borderStyle": "solid",
            "borderTopColor": "rgb(0, 166, 152)",
            "borderWidth": 1,
          },
        ]
      }
    />
    <View
      style={
        Array [
          Object {
            "backgroundColor": "rgb(0, 166, 152)",
            "borderRadius": 4,
            "bottom": -3,
            "height": 16,
            "left": "38%",
            "position": "absolute",
            "transform": Array [
              Object {
                "rotate": "45deg",
              },
            ],
            "width": 16,
          },
          Object {
            "backgroundColor": "rgb(255, 255, 255)",
            "borderBottomLeftRadius": 0,
            "borderColor": "rgb(0, 166, 152)",
            "borderLeftColor": "transparent",
            "borderStyle": "solid",
            "borderTopColor": "transparent",
            "borderTopRightRadius": 0,
            "borderWidth": 1,
            "bottom": -3,
            "height": 17,
            "left": "46%",
            "width": 17,
          },
        ]
      }
    />
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "rgb(17, 18, 54)",
            "fontFamily": "BpkIcon",
            "fontSize": 24,
            "includeFontPadding": false,
          },
          Object {
            "fontSize": 16,
          },
          Array [
            Object {
              "color": "rgb(255, 255, 255)",
            },
            Object {
              "color": "rgb(0, 166, 152)",
            },
          ],
        ]
      }
    >
      
    </Text>
  </View>
</AIRMapMarker>
`;
